# QUASAR-TAO

./: .env.example  .gitignore  CONFIGURATION_FIX_SUMMARY.md  DEBUGGING_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.validator  ENHANCED_LOGGING_GUIDE.md  QUASAR_REENGINEERING_V3.md  README.md  REQUIREMENTS_SUMMARY.md  SIMPLIFIED_MINER_GUIDE.md  START_MINER.sh  START_MINER_INFERENCE.sh  START_SERVER.sh  START_VALIDATOR.sh  SUMMARY.md  TESTING_GUIDE.md  UPDATED_IMPLEMENTATION_PLAN.md  build_all.bat  cheat_solver.py  check_miner_status.py  check_tables.py  compare_hotkeys.py  create_wallet.py  docker-compose.yml  fetch_remote_task.py  hfa_config.json  migrate_miner_scores_columns.py  open_port_8091.sh  quasar_inference.py  quasar_validator.db  register_miner.py  render.yaml  requirements.txt  run_tests.py  setup.py  subnet_config.json  test_config_system.py  (+2 more)
.github/workflows/: docker-push.yml
benchmarks/: __init__.py  benchmark_loader.py  benchmark_task.py  govreport_loader.py  hotpotqa_loader.py  longbench_loader.py  needle_haystack_loader.py
bittensor_subnet/: README.md
bittensor_subnet/hfa_subnet/: README.md  hfa_config.json  requirements.txt  setup.py  subnet_config.json
challenge/: Dockerfile  code_runner.py  server.py
data/: docmath.jsonl  longcode.json
docker-build/: BUILD.bazel  MODULE.bazel  WORKSPACE  load_config_from_env.sh  push_miner.sh
docker-build/miner/: BUILD.bazel  inference_server.py  requirements.inference.txt
docs/: running_on_mainnet.md  running_on_staging.md  running_on_testnet.md
hfa_subnet/: DEPLOYMENT_GUIDE.md  README.md  hfa_config.json  logging.conf  requirements.txt  run_tests.py  subnet_config.json
hfa_subnet/neurons/: miner.py  (+1 more)
miner/: BUILD.bazel  Dockerfile  Dockerfile.inference  Dockerfile.render  inference_server.py  requirements.inference.lightweight.txt  server.py
neurons/: miner.py  validator.py
quasar/: __init__.py  base_model.py  inference_verification.py  mock.py  protocol.py
scripts/: __init__.py  register_miner.py  register_miner.sh  run_miner.py  setup_environment.py  test_submit_kernel.sh
template/: mock.py
tests/: conftest.py  test_context_builder.py  test_quasar_mining.py  test_template_validator.py
validator/: Cargo.toml  Dockerfile
validator/src/: main.rs
validator_api/: answer_extractor.py  app.py  auth.py  database.py  docmath_loader.py  longcode_loader.py  models.py  requirements.txt  sandbox_executor.py  scoring.py  verify_api.py
(+103 files in other folders)
